[gd_scene load_steps=44 format=2]

[ext_resource path="res://Enemies/AnglerSpider1.gd" type="Script" id=1]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Toxic Magma Crab.png" type="Texture" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://Effects/HitEffect copy.png" type="Texture" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://Enemies/Scorpion_w_no_tail.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 10 )
region = Rect2( 0, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 10 )
region = Rect2( 64, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 10 )
region = Rect2( 128, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 10 )
region = Rect2( 192, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 10 )
region = Rect2( 256, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 10 )
region = Rect2( 320, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 10 )
region = Rect2( 384, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 10 )
region = Rect2( 448, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 10 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 10 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 10 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 10 )
region = Rect2( 256, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 10 )
region = Rect2( 320, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 10 )
region = Rect2( 384, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 10 )
region = Rect2( 448, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 4.0
height = 10.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 17.0
height = 22.0

[sub_resource type="CircleShape2D" id=10]
radius = 155.013

[sub_resource type="CapsuleShape2D" id=11]
radius = 18.9999
height = 44.0

[sub_resource type="CapsuleShape2D" id=12]
radius = 14.9999
height = 20.0

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 10 )
region = Rect2( 200, 198, 141, 94 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 10 )
region = Rect2( 348, 198, 141, 94 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 0, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 64, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 128, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 192, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 256, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 320, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 384, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 448, 320, 64, 64 )

[sub_resource type="SpriteFrames" id=39]
animations = [ {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="AnglerSpider1" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 10 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 7 )
animation = "attack"
frame = 6
playing = true
offset = Vector2( 1, -15 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -3 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( -10, 0 )
rotation = 1.5708
collision_layer = 72

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -5, -8 )
shape = SubResource( 9 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
max_health = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 10 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 2, -10 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, -3 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]
visible = false

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 37, -83 )
rotation = 6.19592
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 30 )
frame = 1
playing = true
flip_h = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
position = Vector2( 123, -56 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 39 )
frame = 1
playing = true
flip_h = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 126.5, -57 )
scale = Vector2( 1.80769, 1.75 )
texture = ExtResource( 8 )
color = Color( 0.0666667, 0.372549, 0.0509804, 1 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
